Fixed nav bar text align.

--- a/style.css
+++ b/style.css
@@ -35,12 +35,10 @@ a {
     color:hotpink;
 }
 
-/* .header nav {
-    /* padding-top: 0px;
-    margin-right: 0px;
-    float: right; 
+.header nav {
+    text-align: right; 
 }
-*/
+
 
 
 .header nav ul {
